// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="{} ant-breadcrumb"
  id="default"
/>
`;

exports[`Render properties.list.icon - value[0] 1`] = `
<div
  className="{} ant-breadcrumb"
  id="properties.list.icon"
>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},null]}"
      >
        <span
          aria-label="loading-3-quarters"
          basePath=""
          className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{},{\\"paddingRight\\":8}]}"
          id="properties.list.icon_0_icon"
          required={false}
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading-3-quarters"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
            />
          </svg>
        </span>
        label 1
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},null]}"
      >
        <span
          aria-label="loading-3-quarters"
          basePath=""
          className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{},{\\"paddingRight\\":8}]}"
          id="properties.list.icon_1_icon"
          required={false}
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading-3-quarters"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
            />
          </svg>
        </span>
        label 2
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.icon with onClick - value[0] 1`] = `
<div
  className="{} ant-breadcrumb"
  id="properties.list.icon with onClick"
>
  <span>
    <span
      className="ant-breadcrumb-link"
      onClick={[Function]}
    >
      <span
        className="{\\"style\\":[{\\"cursor\\":\\"pointer\\"},null]}"
      >
        <span
          aria-label="loading-3-quarters"
          basePath=""
          className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{},{\\"paddingRight\\":8}]}"
          id="properties.list.icon with onClick_0_icon"
          required={false}
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading-3-quarters"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
            />
          </svg>
        </span>
        label 1
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
      onClick={[Function]}
    >
      <span
        className="{\\"style\\":[{\\"cursor\\":\\"pointer\\"},null]}"
      >
        <span
          aria-label="loading-3-quarters"
          basePath=""
          className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{},{\\"paddingRight\\":8}]}"
          id="properties.list.icon with onClick_1_icon"
          required={false}
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading-3-quarters"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
            />
          </svg>
        </span>
        label 2
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.label strings - value[0] 1`] = `
<div
  className="{} ant-breadcrumb"
  id="properties.list.label strings"
>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},null]}"
      >
        Page One
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},null]}"
      >
        Page two
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.pageId - value[0] 1`] = `
<div
  className="{} ant-breadcrumb"
  id="properties.list.pageId"
>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <a
        className="{\\"style\\":[{},null]}"
        href="/page1"
        onClick={[Function]}
      >
        page1
      </a>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <a
        className="{\\"style\\":[{},null]}"
        href="/page2"
        onClick={[Function]}
      >
        page2
      </a>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.pageId label and url - value[0] 1`] = `
<div
  className="{} ant-breadcrumb"
  id="properties.list.pageId label and url"
>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <a
        className="{\\"style\\":[{},null]}"
        href="/page1"
        onClick={[Function]}
      >
        page1
      </a>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <a
        className="{\\"style\\":[{},null]}"
        href="https://www.url.com"
      >
        label url
      </a>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <a
        className="{\\"style\\":[{},null]}"
        href="/page2"
        onClick={[Function]}
      >
        label pageId
      </a>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <a
        className="{\\"style\\":[{},null]}"
        href="/page3"
        onClick={[Function]}
      >
        page3
      </a>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},null]}"
      >
        label4
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.style - value[0] 1`] = `
<div
  className="{} ant-breadcrumb"
  id="properties.list.style"
>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},{\\"color\\":\\"blue\\"}]}"
      >
        Page One
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},{\\"color\\":\\"red\\"}]}"
      >
        Page two
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.list.url - value[0] 1`] = `
<div
  className="{} ant-breadcrumb"
  id="properties.list.url"
>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <a
        className="{\\"style\\":[{},null]}"
        href="https://www.url.com"
      >
        https://www.url.com
      </a>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <a
        className="{\\"style\\":[{},null]}"
        href="https://docs.url.com"
      >
        https://docs.url.com
      </a>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Render properties.separator - value[0] 1`] = `
<div
  className="{} ant-breadcrumb"
  id="properties.separator"
>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},null]}"
      >
        Page One
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},null]}"
      >
        Page two
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      -&gt;
    </span>
  </span>
</div>
`;

exports[`Render properties.style: fontSize: 18 - value[0] 1`] = `
<div
  className="{\\"style\\":{\\"fontSize\\":18}} ant-breadcrumb"
  id="properties.style: fontSize: 18"
>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},null]}"
      >
        Page One
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      className="ant-breadcrumb-link"
    >
      <span
        className="{\\"style\\":[{},null]}"
      >
        Page two
      </span>
    </span>
    <span
      className="ant-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.list.icon 1`] = `true`;

exports[`Test Schema properties.list.icon 2`] = `null`;

exports[`Test Schema properties.list.icon with onClick 1`] = `true`;

exports[`Test Schema properties.list.icon with onClick 2`] = `null`;

exports[`Test Schema properties.list.label strings 1`] = `true`;

exports[`Test Schema properties.list.label strings 2`] = `null`;

exports[`Test Schema properties.list.pageId 1`] = `true`;

exports[`Test Schema properties.list.pageId 2`] = `null`;

exports[`Test Schema properties.list.pageId label and url 1`] = `true`;

exports[`Test Schema properties.list.pageId label and url 2`] = `null`;

exports[`Test Schema properties.list.style 1`] = `true`;

exports[`Test Schema properties.list.style 2`] = `null`;

exports[`Test Schema properties.list.url 1`] = `true`;

exports[`Test Schema properties.list.url 2`] = `null`;

exports[`Test Schema properties.separator 1`] = `true`;

exports[`Test Schema properties.separator 2`] = `null`;

exports[`Test Schema properties.style: fontSize: 18 1`] = `true`;

exports[`Test Schema properties.style: fontSize: 18 2`] = `null`;
